[package]
name = "rust-mock-geojson-endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
aws-config = "0.54"
geojson = "0.24.0"
lambda_http = "0.7"
lambda_runtime = "0.7"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
